fixed delete-recipe id issue, chenged scrollbar colors

--- a/public/addEditRec.css
+++ b/public/addEditRec.css
@@ -189,21 +189,14 @@ label .timeIcon{
 }
 .listWrappr{
     width: 100%;
-   /* border: solid 1px firebrick;
-       overflow-y: hidden; 
-    max-height: 100px;*/
 }
 .listWrapprScrollbar{
     overflow-y: scroll;
-    /* border: solid 1px blue; */
     height: 100%;
     max-height: 250px;
-    margin: 0 2em;
+    margin: 0 1em;
 }
 .listWrapprTipScrollbar{
-    /* overflow-y: scroll;
-    border: solid 1px blue;
-    height: 100%; */
     max-height: 80px;
 }
 .tipUl::-webkit-scrollbar,
@@ -214,18 +207,17 @@ label .timeIcon{
 .tipUl::-webkit-scrollbar-track,
 .igUl::-webkit-scrollbar-track,
 .dirOl::-webkit-scrollbar-track{
-    box-shadow: inset 0 0 12px rgba(0,0,0,0.3);
-    -webkit-box-shadow: inset 0 0 12px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 .8em #c5d1cf;
 }
 .tipUl::-webkit-scrollbar-thumb,
 .igUl::-webkit-scrollbar-thumb,
 .dirOl::-webkit-scrollbar-thumb{
-    background-color: #ac5757;
+    background-color: rgba(0, 90, 100, 0.376);
 }
 .tipUl::-webkit-scrollbar-thumb:hover,
 .igUl::-webkit-scrollbar-thumb:hover,
 .dirOl::-webkit-scrollbar-thumb:hover{
-    background-color: #9c4444;
+    background-color: rgba(0, 90, 100, 0.603);
 }
 .listWrappr2{
    /* max-height: 226px;*/
@@ -243,7 +235,7 @@ label .timeIcon{
     text-align: left;
     list-style-position: inside;
     margin-bottom: .2em;
-    width: 97%;
+    width: 99%;
 }
 .tipUl span,
 .igUl span,
@@ -282,16 +274,6 @@ label .timeIcon{
     overflow-y: auto;
 }
 .inputGroup .plusIconParent .editListItem textarea{
-   /*background: #ccc;
-      margin: 0;
-    padding: 0;
-    margin: .5em 0;
-    min-height: 4em;
-    height: auto;
-    border: solid 1px lightgray;
-    resize: none;
-    outline: none; */
-    
     margin: .5em 0;
     width: 100%;
     min-height: 1.5em;
